--- a/dBizi/www/index.html
+++ b/dBizi/www/index.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <title>Blank App</title>
-    </head>
-    <body>
-        <script type="text/javascript" src="cordova.js"></script>
-    </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+  <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
+  <meta http-equiv="Content-Security-Policy" content="default-src *;
+                                         style-src * 'self' 'unsafe-inline' 'unsafe-eval';
+                                         script-src * 'self' 'unsafe-inline';">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" /> -->
+  <!-- Good default declaration:
+    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
+    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+        * Enable inline JS: add 'unsafe-inline' to default-src
+        * Enable eval(): add 'unsafe-eval' to default-src
+    * Create your own at http://cspisawesome.com
+    -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <title>Google Maps y PhoneGap</title>
+  <style>
+    #map-canvas,
+    #cargando_mapa {
+      margin: auto;
+      border-radius: 5px;
+      border-width: thin;
+      width: 95%;
+      height: 400px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- MENU LATERAL -->
+  <div id="menuprincipal">
+    <div id="wrapperMenu">
+      <div class="scroller">
+        <div id="contenidoMenu">
+          <ul>
+            <li>Entrada de menu 1</li>
+            <li>Entrada de menu 2</li>
+            <li>Entrada de menu 3</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--FIN MENU LATERAL -->
+
+  <div id="cuerpo" class="page center">
+    <div id="header">
+      <div id="header">
+        <b></b>
+        <a id="menubtn" href="javascript:menu('menu');">
+          <div class="btn">MENU</div>
+        </a>
+        </b>
+      </div>
+      <div id="wrapper">
+        <div class="scroller">
+          <div id="contenidoCuerpo">
+            <h1>Google Maps y PhoneGap<h1>
+                          <div id="cargando_mapa">
+                            <div id="map-canvas"></div>
+                          </div>
+                  </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+  <script type="text/javascript" src="cordova.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+  <script charset="utf-8" type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
+
+</body>
+
 </html>
